--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/project?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=sang1230
 
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+openweathermap.key=6458f85b40ea0c5e6bd4d872fddd56e1
