--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.17'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+//	id 'org.springframework.boot' version '3.1.5'
+//	id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'zerobase'
@@ -9,6 +11,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	sourceCompatibility = '1.8'
+//	sourceCompatibility = '17'
 }
 
 configurations {
@@ -25,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'//jpa를 사용하려면 @Entity사용
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
