로깅 설정완료(사용 코드 추가 요구)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=sang1230
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 openweathermap.key=6458f85b40ea0c5e6bd4d872fddd56e1
+
+logging.config=classpath:logback-spring.xml
