--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.database=mysql
 openweathermap.key=6458f85b40ea0c5e6bd4d872fddd56e1
 
 logging.config=classpath:logback-spring.xml
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
